--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "dev": "nodemon --exec babel-node index.js",
-    "start": "babel-node index.js"
+    "start": "babel-node index.js",
+    "dev": "nodemon --exec babel-node index.js"
   },
   "author": "Fernando Calixto de Oliveira",
   "license": "ISC",
@@ -31,7 +31,7 @@
     "@babel/plugin-syntax-import-meta": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^23.4.2",
+    "babel-jest": "^26.6.3",
     "babel-upgrade": "^1.0.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -47,7 +47,7 @@
     "sequelize-cli": "^6.2.0"
   },
   "devDependencies": {
-    "eslint": "^5.16.0",
-    "nodemon": "^1.18.10"
+    "eslint": "^7.24.0",
+    "nodemon": "^2.0.7"
   }
 }
